# gitup-rust

./: .gitignore  Cargo.toml  ENHANCED_GRAPH.md  MIGRATION_PLAN.md  README.md  TUI_ENHANCEMENT_PLAN.md  TUI_ENHANCEMENT_PLAN_V2.md  TUI_VIM_FEATURES.md  test_commit.txt  test_e_key.sh  test_enhanced_graph.rs  test_navigation.sh  test_tui.sh
docs/: enhanced-graph-implementation.md  git-chain-visualization.md  gitlens-visualization-analysis.md  navigation-chain-implementation.md  vim-guide.md
figs/000-bootstrap/: architecture.puml
figs/001-graph-core/: algorithm_flow.puml  architecture.puml
figs/002-layout/: algorithm_flow.puml  architecture.puml
figs/003-render/: algorithm_flow.puml  architecture.puml
figs/004-scroll/: algorithm_flow.puml  architecture.puml
figs/005-compact/: algorithm_flow.puml  architecture.puml
gitup-core/: Cargo.toml
gitup-core/src/: cherry_pick.rs  commit.rs  diff.rs  lib.rs  merge.rs  rebase.rs  remote.rs  repository.rs  stash.rs  tag.rs
gitup-ffi/: Cargo.toml
gitup-ffi/src/: lib.rs
gitup-tui/: Cargo.toml  TODO.md
gitup-tui/examples/: test_graph.rs
gitup-tui/src/: app.rs  app_enhanced.rs  event.rs  graph.rs  graph_builder.rs  graph_enhanced.rs  lib.rs  main.rs  operations.rs  watcher.rs
gitup-tui/src/vim/: commands.rs  config.rs  macros.rs  marks.rs  mod.rs  mode.rs  motion.rs  operator.rs  register.rs  state.rs  text_objects.rs
gitup-ui/: Cargo.toml
gitup-ui/src/: enhanced_graph.rs  lib.rs  simple_graph.rs  tui.rs
gitup-ui/src/events/: bus.rs  debounce.rs  mod.rs  types.rs  watcher.rs
gitup-ui/src/graph/: engine.rs  lane_manager.rs  mod.rs  row_edges.rs  types.rs  widget.rs
graph/: Cargo.toml  mod.rs
graph/src/: lib.rs
graph/src/actions/: ops.rs
graph/src/core/: dag.rs  edge.rs  mod.rs  node.rs
graph/src/decor/: refs.rs
graph/src/git_backend/: mod.rs  walker.rs
graph/src/layout/: compact.rs  mod.rs  row_builder.rs  simple.rs
graph/src/query/: filter.rs
graph/src/render/: cache.rs  measure.rs  mod.rs  overlay.rs  router.rs  seam.rs  text.rs  tui.rs  viewport.rs
graph/src/ui/: interactions.rs
scripts/: graph_scenarios.sh  rapid_implement.sh
scripts/demo/: 001-graph-core.sh  002-layout.sh  003-render.sh  004-viewport.sh  005-compact.sh
src/: demo_graph.rs  main.rs
