[package]
name = "gitup-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "gitup-core",
    "gitup-ui",
    "gitup-tui",
    "gitup-ffi",
    "graph"
]

[dependencies]
gitup-core = { path = "gitup-core" }
gitup-ui = { path = "gitup-ui" }
gitup-ffi = { path = "gitup-ffi" }
graph = { path = "graph" }

# CLI
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"

# Git
git2 = "0.19"

# Logging and error handling
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

[[bin]]
name = "gitup"
path = "src/main.rs"

[[bin]]
name = "demo_graph"
path = "src/demo_graph.rs"

[profile.release]
opt-level = 3
lto = true
strip = true