[package]
name = "gitup-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Git operations
git2 = "0.19"

# Data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Utils
chrono = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = "0.1"

# File operations
walkdir = "2.5"
tempfile = "3.12"
