[package]
name = "gitup-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gitup-tui"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Git operations
git2 = "0.19"
gitup-core = { path = "../gitup-core" }
graph = { path = "../graph" }

# Terminal UI
ratatui = "0.26"
crossterm = "0.27"

# File watching
notify = "6.1"

# Date/Time
chrono = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (for future features)
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"