[package]
name = "gitup-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
gitup-core = { path = "../gitup-core" }
graph = { path = "../graph" }

# Rendering
ratatui = "0.28"  # For terminal UI
crossterm = "0.28"

# Unicode handling for CJK text
unicode-width = "0.2"
unicode-segmentation = "1.11"

# Utils
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
notify = { version = "6.1", optional = true }

[features]
default = []
watch = ["notify"]

[dev-dependencies]
tempfile = "3.12"
